--- a/css/style.css
+++ b/css/style.css
@@ -33,40 +33,40 @@ body {
 }
 
 .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
-.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .card__amount-number {
+.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
-.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .card__amount-number {
+.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
-.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .card__amount-number {
+.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .tabs__price, .feedback__text-title, .form__input::placeholder,
-.form__textarea::placeholder, .form__btn, .cart__name, .card__amount-number {
+.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.header__list, .stories__title, .tabs__name, .feedback__author-name, .footer__links {
+.header__list, .stories__title, .tabs__name, .feedback__author-name, .footer__links, .text__title, .card__price {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
 }
 
-.title, .hero__title, .process__number, .process__text-title, .form__title, .cart__title {
+.title, .hero__title, .process__number, .process__text-title, .form__title, .cart__title, .card__title {
   font-family: 'FuturaPT-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -930,6 +930,15 @@ p {
   margin-left: 10px;
 }
 
+.footer__social-link {
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+
+.footer__social-link:hover {
+  opacity: 0.7;
+}
+
 .cart {
   position: fixed;
   top: 0;
@@ -1074,14 +1083,14 @@ p {
   border: none;
 }
 
-.card__bottom {
+.cart__bottom {
   position: relative;
   margin-top: auto;
   padding-top: 40px;
   width: 100%;
 }
 
-.card__bottom::before {
+.cart__bottom::before {
   position: absolute;
   content: '';
   top: 0;
@@ -1106,17 +1115,17 @@ p {
           justify-content: space-between;
 }
 
-.card__amount-text {
+.cart__amount-text {
   font-size: 22px;
   line-height: 1;
 }
 
-.card__amount-number {
+.cart__amount-number {
   font-size: 30px;
   line-height: 1;
 }
 
-.card__btn {
+.cart__btn {
   display: block;
   margin-top: 40px;
   margin-left: auto;
@@ -1137,7 +1146,7 @@ p {
   transition: background 0.3s ease;
 }
 
-.card__btn:hover {
+.cart__btn:hover {
   background: #6cbab8;
 }
 
@@ -1150,4 +1159,197 @@ p {
   width: 100%;
   height: 100%;
   z-index: 13;
+}
+
+.card {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  padding: 40px 60px 30px;
+  width: 900px;
+  max-width: 100%;
+  background-color: #fff;
+  border-radius: 30px;
+  z-index: 15;
+}
+
+.card__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card__title {
+  font-size: 30px;
+  line-height: 1;
+  color: #008f99;
+}
+
+.card__tag {
+  margin-left: 42px;
+  margin-right: auto;
+  padding: 5px 8px;
+  background: #ff7a50;
+  border-radius: 6px;
+  font-size: 22px;
+  color: #fff;
+}
+
+.card__close-btn {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  background-image: url("/images/icons/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border: none;
+  cursor: pointer;
+}
+
+.card__info {
+  margin-top: 41px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.card__image {
+  width: 313px;
+  height: 218px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+
+.card__thumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-top: 20px;
+}
+
+.card__thumbs-img {
+  display: block;
+  width: 70px;
+  height: 70px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.card__thumbs-img--active {
+  border: 1px solid #ff7a50;
+}
+
+.card__thumbs-img + .card__thumbs-img {
+  margin-left: 10px;
+}
+
+.text {
+  margin-left: 22px;
+}
+
+.text__title {
+  font-size: 25px;
+}
+
+.text__description {
+  margin-top: 20px;
+  width: 345px;
+  max-width: 100%;
+  font-size: 18px;
+}
+
+.table {
+  margin-top: 40px;
+  font-size: 14px;
+  line-height: 1;
+  border-spacing: 0;
+}
+
+.table__title {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: 400;
+  color: rgba(65, 64, 66, 0.51);
+}
+
+.table__data {
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.table__data + .table__data,
+.table__title + .table__title {
+  border-left: 1px solid #efefef;
+}
+
+.table__data:first-child,
+.table__title:first-child {
+  padding-left: 0;
+}
+
+.card__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 55px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  padding-left: 23px;
+  width: 359px;
+  max-width: 100%;
+  background-color: #fff;
+  border: 3px solid #f2f6f7;
+  border-radius: 20px;
+}
+
+.card__price {
+  line-height: 1;
+}
+
+.card__btn {
+  width: 246px;
+  height: 50px;
+  background: #008f99;
+  -webkit-box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
+          box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
+  border-radius: 16px;
+  border: none;
+  font-size: 18px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
 }
