--- a/scss/style.scss
+++ b/scss/style.scss
@@ -667,6 +667,12 @@ p {
 .footer__social-item + .footer__social-item {
   margin-left: 10px;
 }
+.footer__social-link {
+  transition: opacity 0.3s ease;
+}
+.footer__social-link:hover {
+  opacity: 0.7;
+}
 // Footer end
 
 // Cart start
@@ -770,13 +776,13 @@ p {
   text-align: center;
   border: none;
 }
-.card__bottom {
+.cart__bottom {
   position: relative;
   margin-top: auto;
   padding-top: 40px;
   width: 100%;
 }
-.card__bottom::before {
+.cart__bottom::before {
   position: absolute;
   content: '';
   top: 0;
@@ -792,16 +798,16 @@ p {
   align-items: center;
   justify-content: space-between;
 }
-.card__amount-text {
+.cart__amount-text {
   font-size: 22px;
   line-height: 1;
 }
-.card__amount-number {
+.cart__amount-number {
   @extend %probapro-medium;
   font-size: 30px;
   line-height: 1;
 }
-.card__btn {
+.cart__btn {
   display: block;
   margin-top: 40px;
   margin-left: auto;
@@ -819,7 +825,7 @@ p {
   cursor: pointer;
   transition: background 0.3s ease;
 }
-.card__btn:hover {
+.cart__btn:hover {
   background: $light-blue;
 }
 .overlay {
@@ -833,3 +839,152 @@ p {
   z-index: 13;
 }
 // Cart end
+
+// Product card start
+.card {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  padding: 40px 60px 30px;
+  width: 900px;
+  max-width: 100%;
+  background-color: #fff;
+  border-radius: 30px;
+  z-index: 15;
+}
+.card__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card__title {
+  @extend %futurapt-bold;
+  font-size: 30px;
+  line-height: 1;
+  color: $dark-blue;
+}
+.card__tag {
+  margin-left: 42px;
+  margin-right: auto;
+  padding: 5px 8px;
+  background: #ff7a50;
+  border-radius: 6px;
+  font-size: 22px;
+  color: #fff;
+}
+.card__close-btn {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  background-image: url('/images/icons/close.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border: none;
+  cursor: pointer;
+}
+.card__info {
+  margin-top: 41px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.card__image {
+  width: 313px;
+  height: 218px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.card__thumbs {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+.card__thumbs-img {
+  display: block;
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.card__thumbs-img--active {
+  border: 1px solid #ff7a50;
+}
+.card__thumbs-img + .card__thumbs-img {
+  margin-left: 10px;
+}
+.text {
+  margin-left: 22px;
+}
+.text__title {
+  @extend %probapro-bold;
+  font-size: 25px;
+}
+.text__description {
+  margin-top: 20px;
+  width: 345px;
+  max-width: 100%;
+  font-size: 18px;
+}
+.table {
+  margin-top: 40px;
+  font-size: 14px;
+  line-height: 1;
+  border-spacing: 0;
+}
+.table__title {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: 400;
+  color: rgba(65, 64, 66, 0.51);
+}
+.table__data {
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.table__data + .table__data,
+.table__title + .table__title {
+  border-left: 1px solid $light-gray;
+}
+.table__data:first-child,
+.table__title:first-child {
+  padding-left: 0;
+}
+.card__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 55px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  padding-left: 23px;
+  width: 359px;
+  max-width: 100%;
+  background-color: #fff;
+  border: 3px solid #f2f6f7;
+  border-radius: 20px;
+}
+.card__price {
+  @extend %probapro-bold;
+  line-height: 1;
+}
+.card__btn {
+  width: 246px;
+  height: 50px;
+  background: #008f99;
+  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
+  border-radius: 16px;
+  border: none;
+  font-size: 18px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
+}
+// Product card end
